faulty .blend file causes crash when creating new scene, reverting, opening file and even closing Blender #69974

Closed
opened 2019-09-17 11:27:10 +02:00 by Marcin Twarowski · 6 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 21:02, hash: 76650402f3
Works: stable 2.80

Short description of error
I've been working on a project for couple of weeks and I've been using daily builds. Today Blender crashed. I removed everything from the file and to my surprise what supposed to be an empty scene takes up 37,5mb. And that's compressed. So the file seems to be corrupted. When you open it, Blender crashes whenever you try to revert, open a new .blend file, create new scene. Also simply closing Blender crashes it with "program stopped working" info. It also crashes when you try to open the faulty .blend file without loading UI.

I looked at contents in outliner and only weird thing I noticed is that there are many "Screens" with a "default" in name:
obraz.png

Apparently I have saved a default blender scene with those "screens" and whenever I start a new project they are there. What are those anyway? I can't delete them and they are not workspaces. I've been appending some things from 2.79 and perhaps that's how they got there.

The faulty .blend doesn't crash in stable 2.80 release. Saving the file again in 2.80 seems to fix the crashes.

Also, when I open it in 2.80 without loading UI, some of the "default" screens are purged, but not all of them:
obraz.png

Exact steps for others to reproduce the error
Here's the file:
new_scene_crash.blend
Try making a new scene, revert or just quit Blender.

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 21:02, hash: `76650402f3` Works: stable 2.80 **Short description of error** I've been working on a project for couple of weeks and I've been using daily builds. Today Blender crashed. I removed everything from the file and to my surprise what supposed to be an empty scene takes up 37,5mb. And that's compressed. So the file seems to be corrupted. When you open it, Blender crashes whenever you try to revert, open a new .blend file, create new scene. Also simply closing Blender crashes it with "program stopped working" info. It also crashes when you try to open the faulty .blend file without loading UI. I looked at contents in outliner and only weird thing I noticed is that there are many "Screens" with a "default" in name: ![obraz.png](https://archive.blender.org/developer/F7752613/obraz.png) Apparently I have saved a default blender scene with those "screens" and whenever I start a new project they are there. What are those anyway? I can't delete them and they are not workspaces. I've been appending some things from 2.79 and perhaps that's how they got there. **The faulty .blend doesn't crash in stable 2.80 release. Saving the file again in 2.80 seems to fix the crashes.** Also, when I open it in 2.80 without loading UI, some of the "default" screens are purged, but not all of them: ![obraz.png](https://archive.blender.org/developer/F7752692/obraz.png) **Exact steps for others to reproduce the error** Here's the file: [new_scene_crash.blend](https://archive.blender.org/developer/F7752696/new_scene_crash.blend) Try making a new scene, revert or just quit Blender.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Added subscriber: @tomjk

Added subscriber: @tomjk

Can reproduce here. Blender closes with segmentation fault on revert, new scene, but not on quit (saves a quit.blend and closes normally).

Can also re-save with Blender 2.80, and that new file won't crash in 2.81.

Operating system: Linux-4.15.0-55-generic-x86_64-with-debian-stretch-sid 64 Bits
Blender version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 08:18, hash: 11b0c2080c

Can reproduce here. Blender closes with `segmentation fault` on revert, new scene, but not on quit (saves a quit.blend and closes normally). Can also re-save with Blender 2.80, and that new file won't crash in 2.81. Operating system: Linux-4.15.0-55-generic-x86_64-with-debian-stretch-sid 64 Bits Blender version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 08:18, hash: `11b0c2080c`
Brecht Van Lommel self-assigned this 2019-09-17 13:04:47 +02:00

This issue was referenced by 6ee2d10005

This issue was referenced by 6ee2d10005a9e3f47ba6eed53d4e56b9e76f9842

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Ok, I found out "default.001" etc. are added to the list of Screens every time you open new window. They don't disappear when you close it, though. That's why I have them saved in my startup file.

But why is this seemingly empty file so heavy? Where's all that data? EDIT: Nevermind, I forgot I had baked irradiance volume in the file :) Thanks for fixing the bug!

Ok, I found out "default.001" etc. are added to the list of Screens every time you open new window. They don't disappear when you close it, though. That's why I have them saved in my startup file. But why is this seemingly empty file so heavy? Where's all that data? EDIT: Nevermind, I forgot I had baked irradiance volume in the file :) Thanks for fixing the bug!
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#69974
No description provided.