Fix T69974: crashes in .blend files where 3D viewport was split

This was caused by a missing copy of the recently adding 3D viewport shading
ID properties.